--- a/public_html/practice_3/style.css
+++ b/public_html/practice_3/style.css
@@ -1,1 +1,99 @@
 
+* {
+    box-sizing: border-box;
+    font-family: arial;
+    margin:0;
+
+}
+
+h1, h2 {
+    color: #C45911;
+    font-family: Arial Black;
+    font-weight: bold;    
+}
+
+h1 > span {
+    color: white;
+    font-family: Arial Black;
+    font-weight: bold; 
+}
+
+h2 {
+    padding: 20px 0 20px 0;
+}
+
+
+
+.header1 {
+    background-color: #333F50;
+    color: white;
+    text-align: center;
+    padding: 40px;
+    line-height: 1.8;
+
+}
+
+.block1 {
+    margin: 40px 1vw 40px 5vw;
+
+
+}
+
+img {
+
+    border-radius: 55px;
+    border-width: 2px;
+    border-color: #333F50;
+    border-style: solid;
+    padding: 2px;
+
+
+}
+
+.block2 {
+    margin: 40px 0px 10px 5vw;
+    padding: 10px;
+    float: left;
+    border-top: 1px solid black;
+    border-right: 1px solid black;
+
+
+
+}
+
+
+
+.block3 {
+    margin: 40px 1vw 10px 0vw;
+    padding: 10px;
+    float: left;
+    border-top: 1px solid black;
+
+
+}
+
+.textalignright1 {
+    padding-top: 20px;
+    text-align: right;
+    font-style: italic;
+
+}
+
+h3 {line-height: 1.5;}
+
+.foto1 {
+    display: flex;
+    justify-content: center;
+    float: left;
+
+}
+
+
+.col-4 {width: 33.33%;}
+
+.col-7 {width: 58.33%;}
+
+
+.subblock1 {
+    float: left;
+}
