--- a/public_html/practice_3/style.css
+++ b/public_html/practice_3/style.css
@@ -54,11 +54,7 @@ img {
     margin: 40px 0px 10px 5vw;
     padding: 10px;
     float: left;
-    border-top: 1px solid black;
-    border-right: 1px solid black;
-
-
-
+    border: 1px solid black;
 }
 
 
