--- a/public_html/practice_3/style.css
+++ b/public_html/practice_3/style.css
@@ -53,7 +53,7 @@ img {
 .block2 {
     margin: 40px 0px 10px 5vw;
     padding: 10px;
-    float: left;
+    float: center;
     border: 1px solid black;
 }
 
