--- a/public_html/courseWork/css/style.css
+++ b/public_html/courseWork/css/style.css
@@ -62,5 +62,22 @@ iframe
 .col
 {
 	background-color:white;
-	
+	border:2px solid 49803b;
+	background-color:518f40;
+}
+
+.row
+{
+	margin-left:10px;
+	margin-right:10px;
+	border:2px solid 49803b;
+}
+input,label
+{
+	text-align:center;
+}
+
+.list-group-item
+{
+	text-align:left;
 }
