--- a/public_html/courseWork/css/style.css
+++ b/public_html/courseWork/css/style.css
@@ -23,21 +23,36 @@ h1
 	margin-right:10px;
 	margin-left:10px;
 	margin-top:40px;
+	font-size: 350%;
 }
 
-h2,p
+h3
+{
+	text-align:center;
+	margin-top:10px;
+	margin-bottom:10px;
+	margin-right:10px;
+	margin-left:10px;
+	font-size: 250%;
+}
+
+h2
 {
 	text-align:center;
 	color:black;
+	margin-top:10px;
+	margin-bottom:10px;
 	margin-right:10px;
 	margin-left:10px;
+	font-size: 250%;
 }
 
 
 body,html
 {
 	background: url(bg2.png);
-	background-size: 100%;
+	width:100%;
+	height:100%;
 }
 
 .header
@@ -57,6 +72,8 @@ iframe
 {
 	width:100%;
 	z-index: 2;
+	margin-bottom:10px;
+	margin-top:10px;
 }
 
 .col
@@ -81,3 +98,20 @@ input,label
 {
 	text-align:left;
 }
+
+footer
+{
+	background-color:488238;
+	text-align:center;
+	position:fixed;
+    bottom:0;
+    width:100%;
+}
+
+.img-fluid
+{
+	text-align: center;
+	display: block;
+}
+
+
